--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -111,22 +111,8 @@
 	margin-bottom: 1em;
 }
 
-.occams-form-item  > .occams-form-moveable {
-    background-color: #DDD;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    text-indent: -90001px;
-    top: 0;
-    width: 1em;
-}
 
-.occams-form-item  > .occams-form-container {
-	border-left: 1px solid #FFF;
-	margin-left: 1em;
-}
-
-.occams-form-item > .occams-form-container > .occams-form-head {
+.occams-form-item > .occams-form-head {
     background-color: #DDD;
 	border-bottom: 1px solid #EFEFEF;
 	color: #666;
@@ -157,7 +143,7 @@
 
 .occams-form-item  .occams-form-collapseable {
 	background: center center url(++resource++collective.z3cform.datagridfield/delete_row_icon.gif);
-	display: block;
+	display: none; /* Collapsable items are not displayed by default */
 	left: 0;
 	position: absolute;
 	text-indent: -9001em;
@@ -266,16 +252,15 @@
  * FIELDSET
  ******************************************************************************/
 
-.occams-form-fieldset:first-child > .occams-form-moveable {
-    background: inherit;
+.occams-form-fieldset > .occams-form-head .occams-form-collapseable {
+    display: block;
 }
 
-.occams-form-fieldset > .occams-form-moveable,
-.occams-form-fieldset > .occams-form-container > .occams-form-head {
+.occams-form-fieldset > .occams-form-head {
     background-color: #D5D5B6;
 }
 
-.occams-form-fieldset > .occams-form-container > .occams-form-content{
+.occams-form-fieldset > .occams-form-content {
     background-color: #FFFFF0;
     min-height: 5em;
 }
@@ -288,11 +273,11 @@
     margin-bottom: 0;
 }
 
-.occams-form-field .occams-form-collapseable {
+.occams-form-field > .occams-form-head .occams-form-collapseable {
     display: none;
 }
 
-.occams-form-field .occams-form-metadata {
+.occams-form-field > .occams-form-head .occams-form-metadata {
     margin-left: 0;
 }
 
