Add form rendering in editor and fieldsets now behaving correctly.

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -300,6 +300,17 @@
 	font-weight: inherit !important;
 }
 
+#occams-form-editor input[type="text"][readonly="readonly"], 
+#occams-form-editor textarea[readonly="readonly"] {
+	background-color: #DDD !important;
+    color: #666 !important;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	user-select: none;
+}
+
 /*******************************************************************************
  * JQUERY OVERRIDES
  ******************************************************************************/
