--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -63,7 +63,6 @@
 
 #of-new li {
     margin: 0 0 0.6em 0;
-    width: 250px !important;
 }
 
 #of-new li:last-child {
@@ -256,11 +255,11 @@
 }
 
 .of-item .of-controls .of-editable {
-	background: url(++resource++occams.form/images/pencil.png);
+	background: center center no-repeat url(++resource++occams.form/images/pencil.png);
 }
 
 .of-item .of-controls .of-deleteable {
-	background: url(++resource++occams.form/images/delete.png);
+	background: center center no-repeat url(++resource++occams.form/images/delete.png);
 }
 
 .of-item .of-content {
@@ -368,6 +367,11 @@
 
 #of-editor .ui-sortable-placeholder * {
     visibility: hidden;
+}
+
+#of-editor .ui-draggable-dragging {
+	display: block;
+	width: 100em;
 }
 
 /*******************************************************************************
