--- a/src/occams/form/static/styles/listing.css
+++ b/src/occams/form/static/styles/listing.css
@@ -1,11 +1,23 @@
-.portaltype-occams-form-repository .listing .option { 
+.portaltype-occams-form-repository .listing .option {
     /* Disable CRUD-form's select box from rendering as a block, otherwise
      * all following rows will have an empty bottom line.
      */
-    display: inline; 
+    display: inline;
 }
 
 .portaltype-occams-form-repository .listing .header-select {
     /* Remove select label in header table for CRUD forms */
     display: none;
+}
+
+
+.portaltype-occams-form-repository .listing a[href*="@@edit"] span{
+	background: center center no-repeat url(++resource++occams.form/images/pencil.png);
+    border: inherit !important;
+    display: block;
+    height: 16px;
+    line-height: 16px;
+    text-indent: -9001em;
+    width: 16px;
+
 }
