Changed the way item controls appear when editing a form

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -112,6 +112,11 @@
 	display: none;
 }
 
+.of-disabled {
+	opacity:0.4;
+	filter:alpha(opacity=40); /* For IE8 and earlier */
+}
+
 .of-placeholder {
 	display: block;
 	height: 0px !important;
