Added a dialog for warning the user of active edits. Closes #37

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -117,6 +117,10 @@
 	filter:alpha(opacity=40); /* For IE8 and earlier */
 }
 
+.of-error {
+	border: 0.2em dotted red;
+}
+
 .of-placeholder {
 	display: block;
 	height: 0px !important;
