Add minimum height to an empty fieldset. Fixes #40

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -48,6 +48,10 @@
     margin-right: 1em;
 }
 
+#of-fieldsets {
+	min-height: 1em;
+}
+
 /*******************************************************************************
  * TOOLBOX
  ******************************************************************************/
