everything works. time for tests

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -16,6 +16,9 @@
  *  http://colorschemedesigner.com/#2n11Tu9nkw0w0
  */
 
+
+
+
 /*******************************************************************************
  * MAIN LAYOUT
  ******************************************************************************/
@@ -32,6 +35,7 @@
 #of-main {
 	margin-top: 1em;
     margin-right: 250px;
+        min-height: 325px;
 }
 
 #of-aux {
@@ -50,6 +54,31 @@
 
 #of-fieldsets {
 	min-height: 1em;
+}
+
+/*******************************************************************************
+ * LISTING
+ ******************************************************************************/
+
+.published {
+   color: green;
+}
+
+.review {
+   color: orange;
+}
+
+.retracted{
+}
+
+.draft {
+   color: red;
+
+}
+
+.current {
+    font-weight: bold;
+
 }
 
 /*******************************************************************************
