Added BLOB field support

--- a/src/occams/form/static/styles/editor.css
+++ b/src/occams/form/static/styles/editor.css
@@ -249,6 +249,12 @@
     background-image: url(++resource++occams.form/images/ui-text-area.png);
 }
 
+.of-blob .of-type,
+#of-new a.of-blob {
+    background-image: url(++resource++occams.form/images/document-binary.png);
+}
+
+
 .of-item .of-version {
 	float: right;
 	padding-right: 1em;
